--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-	"name": "api",
-	"version": "1.0.0",
-	"type": "module",
-	"main": "index.js",
-	"scripts": {
-		"start": "node ./src/server.js",
-		"dev": "nodemon ./src/server.js"
-	},
-	"author": "Felipe Gazolla",
-	"license": "ISC",
-	"description": "",
-	"dependencies": {
-		"express": "^4.21.2",
-		"express-async-errors": "^3.1.1",
-		"sqlite": "^5.1.1",
-		"sqlite3": "^5.1.7"
-	},
-	"devDependencies": {
-		"nodemon": "^3.1.9"
-	}
+  "name": "api",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
+  },
+  "author": "Felipe Gazolla",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "nodemon": "^3.1.9"
+  }
 }
