--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "knex": "^3.1.0",
+    "puppeteer": "^24.0.0",
+    "qrcode": "^1.5.4",
+    "qrcode-terminal": "^0.12.0",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "whatsapp-web.js": "^1.26.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
