--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "puppeteer": "^24.0.0",
+    "puppeteer-core": "^24.1.0",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "sqlite": "^5.1.1",
