--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
